--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "devtree": "file:",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-validator": "^7.2.0",
     "mongoose": "^8.8.2",
-    "slug": "^10.0.0"
+    "slug": "^8.2.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
