--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-.env
-node_modules/
-package-lock.json
-.DS_Store
-dist
+backend/*.env
+backend/node_modules/
+backend/package-lock.json
+backend/*.DS_Store
+backend/dist
